# axion

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: package.json
cli/src/: index.ts
cli/src/commands/: build.ts  dev.test.ts  dev.ts
cli/src/utils/: config.ts  spawn.ts
core/: Cargo.toml  build.rs
core/src/: assets.rs  lib.rs  main.rs  module.rs
core/src/ipc/: bridge.rs  error.rs  mod.rs  platform.rs  uri_scheme.rs
core/src/modules/: fs.rs  mod.rs  notifications.rs  storage.rs  system.rs  window.rs
core/src/permissions/: engine.rs  mod.rs
core/src/rpc/: dispatcher.rs  mod.rs  schema.rs
core/tests/: native_modules_integration.rs  permission_engine_integration.rs
docs/: permissions-schema.md  rpc-schema.md  type-generation.md
examples/smoke-test-app/: axion.config.json  index.html  package.json
schemas/: permissions.schema.json
scripts/: fix-generated-types.mjs
sdk/: package.json  tsconfig.json
sdk/src/: index.ts  rpc-client.test.ts  rpc-client.ts  sdk-setup.test.ts  test-setup.ts  webview.d.ts
sdk/src/hooks/: hooks.test.ts  index.ts  useStorage.ts  useSystemInfo.ts  useWindow.ts
sdk/src/modules/: fs.ts  modules.test.ts  notifications.ts  storage.ts  system.ts  window.ts
sdk/src/types/: RpcErrorPayload.ts  RpcRequest.ts  RpcResponse.ts  index.ts
