[package]
name = "axion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.28.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
] }
